--- a/osaka.html
+++ b/osaka.html
@@ -34,7 +34,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-1.jpeg" alt="Summer x2 Osaka">
-            <span>오사카에서의 첫 사진</span>
+            <span>오사카 입성 후 첫 사진</span>
             </li>
             </ul>
         </div>
@@ -59,7 +59,7 @@
              <li>
              <img src="img-4.jpeg" alt="Summer x2 Osaka">
              <p>📍Kansai International Airport</p>
-             <span>공항 열차타고 라피트 타러 가는 길이다. </span>
+             <span>공항 열차타고 라피트 타러 가는 길. </span>
              </li>
             </ul>
         </div>
@@ -83,7 +83,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-8.jpeg" alt="Summer x2 Osaka">
-            <span>공항 내 편의점에서 갑자기 모찌를 사먹고는.</span>
+            <span>공항 편의점에서 갑자기 모찌를 사 먹고는</span>
             </li>
             </ul>
         </div>
@@ -91,7 +91,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-9.jpeg" alt="Summer x2 Osaka">
-            <span>기념품이 스퀴즈라니!!</span>
+            <span>스퀴즈 기념품을 지나</span>
             </li>
             </ul>
         </div>
@@ -99,7 +99,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-10.jpeg" alt="Summer x2 Osaka">
-            <span>난바역으로 가는 라피트 정류장 도착</span>
+            <span>난바역으로 가는 라피트 정류장에 도착했다.</span>
             </li>
             </ul>
         </div>
@@ -107,7 +107,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-11.jpeg" alt="Summer x2 Osaka">
-            <span>그리고 편의점 3대장 간식</span>
+            <span>열차를 기다리며 편의점 3대장 간식으로 스탠딩런치(?)를 즐겼다.</span>
             </li>
             </ul>
         </div>
@@ -131,7 +131,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-14.jpeg" alt="Summer x2 Osaka">
-            <span>조금 기다려 드디어 탄 라피트, 줄줄이 나있는 동그란 창문들은 놓칠 수 없어 </span>
+            <span>드디어 탄 라피트, 줄줄이 나있는 동그란 창문자리는 놓칠 수 없다. </span>
             </li>
             </ul>
         </div>
@@ -139,7 +139,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-15.jpeg" alt="Summer x2 Osaka">
-            <span>여름 중에서도 가장 여름 날씨다.</span>
+            <span>눈이 행복해지는 시간. .</span>
             </li>
             </ul>
         </div>
@@ -147,7 +147,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-16.jpeg" alt="Summer x2 Osaka">
-            <span>미니 레시또- 는 모으지 않고 못배긴다.</span>
+            <span>미니 레시또-와 동전들</span>
             </li>
             </ul>
         </div>
@@ -156,7 +156,7 @@
              <li>
              <img src="img-17.jpeg" alt="Summer x2 Osaka">
              <p>📍Nanba Station</p>
-             <span>난바 도착. 이제 나간다!</span>
+             <span>난바역 도착!</span>
              </li>
             </ul>
         </div>
@@ -172,7 +172,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-19.jpeg" alt="Summer x2 Osaka">
-            <span>역사에 야채가게라니</span>
+            <span>역사에 야채가게는 첨 봐</span>
             </li>
             </ul>
         </div>
@@ -196,7 +196,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-22.jpeg" alt="Summer x2 Osaka">
-            <span>편의점은 먹고싶은게 너무 많다</span>
+            <span>먹고싶은게 넘쳐나는 콘비니</span>
             </li>
             </ul>
         </div>
@@ -204,7 +204,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-23.jpeg" alt="Summer x2 Osaka">
-            <span>"눈 돌아간다"는 딱 이럴 때</span>
+            <span>"눈 돌아간다"는 이럴 때 쓰는 말이구나. .</span>
             </li>
             </ul>
         </div>
@@ -292,7 +292,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-34.jpeg" alt="Summer x2 Osaka">
-            <span>쨍한 햇볕 풍경은 폭염을 잊게해. .</span>
+            <span>쨍한 햇볕 풍경은 폭염을 잊게하지. . (기억조작일수도..)</span>
             </li>
             </ul>
         </div>
@@ -316,7 +316,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-37.jpeg" alt="Summer x2 Osaka">
-            <span> 라-멘</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -324,7 +324,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-38.jpeg" alt="Summer x2 Osaka">
-            <span> 낡은 건물과 신식 건물이 공존하지만 왠지 낡은 간판들에 더 눈이 간다</span>
+            <span>낡은 건물과 신식 건물의 공존. 그래도 왠지 낡은 간판들에 더 눈이 간다.</span>
             </li>
             </ul>
         </div>
@@ -333,7 +333,7 @@
              <li>
              <img src="img-39.jpeg" alt="Summer x2 Osaka">
              <p>📍Sobayosi</p>
-             <span>첫 끼는 로컬, 관광객에 모두에게 맛집인 100년 전통 소바전문점. </span>
+             <span>첫 끼는 로컬, 관광객에 모두에게 맛집인 100년 전통의~ 소바전문점. </span>
              </li>
             </ul>
         </div>
@@ -341,7 +341,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-40.jpeg" alt="Summer x2 Osaka">
-            <span>장어덮밥도 유명하지만, 가장 맛있던건 저 새우덴뿌라다. 다음엔 꼭 튀김정식을 먹어야지</span>
+            <span>장어덮밥이 유명하지만, 우리에게 가장 맛있던건 저 새우덴뿌라다.</span>
             </li>
             </ul>
         </div>
@@ -357,7 +357,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-42.jpeg" alt="Summer x2 Osaka">
-            <span>사자 머리의 야사카 신사.</span>
+            <span>사자 머리의 야사카 신사</span>
             </li>
             </ul>
         </div>
@@ -381,7 +381,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-45.jpeg" alt="Summer x2 Osaka">
-            <span>거리에 서너개씩 꼭 있는 자판기가 무더위에는 진짜 오아시스가 따로 없다</span>
+            <span>거리에 서너개씩 있는 자판기는 정말 오아시스가 따로 없다</span>
             </li>
             </ul>
         </div>
@@ -413,7 +413,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-49.jpeg" alt="Summer x2 Osaka">
-            <span>키미노 나마에와. . . 영화 그자체</span>
+            <span>여름, 네모네모쿠루마, 정갈한 계단들</span>
             </li>
             </ul>
         </div>
@@ -429,7 +429,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-51.jpeg" alt="Summer x2 Osaka">
-            <span>마리오 와루도-</span>
+            <span> </span>
             </li>
             </ul>
         </div>
