--- a/osaka2.html
+++ b/osaka2.html
@@ -37,7 +37,7 @@
             <li>
             <img src="img-52.jpeg" alt="Summer x2 Osaka">
                 <p>📍Ebisu Bashi  Shopping Street</p>
-            <span>도톤보리쪽 쇼핑스트릿.</span>
+            <span>점심먹고 도톤보리로 가는 길</span>
             </li>
             </ul>
         </div>
@@ -46,7 +46,7 @@
              <li>
              <img src="img-53.jpeg" alt="Summer x2 Osaka">
                  <p>📍Rikuro Ojisang no Mise</p>
-             <span>안살 수 없다. 리쿠로 아저씨 케이크</span>
+             <span>놓칠 수 없다. 리쿠로 오지상 케이크</span>
              </li>
             </ul>
         </div>
@@ -78,7 +78,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-57.jpeg" alt="Summer x2 Osaka">
-            <span>간판 진짜 귀여와</span>
+            <span>간판 진짜 귀여오</span>
             </li>
             </ul>
         </div>
@@ -94,7 +94,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-59.jpeg" alt="Summer x2 Osaka">
-            <span>찰떡아이스는 안먹지만 유키미다이후쿠는 먹는 심리</span>
+            <span>찰떡아이스는 안먹지만 유키미다이후쿠는 먹는 </span>
             </li>
             </ul>
         </div>
@@ -134,7 +134,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-64.jpeg" alt="Summer x2 Osaka">
-            <span>반듯하고 하얀 빌라, 풍성한 조경, 깨끗한 거리는 어떻게 찍어도 인생샷이야. .</span>
+            <span>반듯한 빌라, 풍성한 조경, 깨끗한 거리는 어떻게 찍어도 인생샷이다</span>
             </li>
             </ul>
         </div>
@@ -150,7 +150,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-66.jpeg" alt="Summer x2 Osaka">
-            <span>호텔에서 한입먹어본 케이크. 근데 얘는 냉동해서 먹어야 진가가 산다</span>
+            <span>호텔에서 한입먹어본 오지상 케이크. 얘는 냉동해서 먹는게 훨씬 맛있다</span>
             </li>
             </ul>
         </div>
@@ -174,7 +174,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-69.jpeg" alt="Summer x2 Osaka">
-            <span>이 때 처음먹고 일본갈 때마다 찾은 백포도물. 근데 이 뒤로 한번도 만난 적이 없다. .</span>
+            <span>첫입에 반해버린 포도물. 안달고 깔끔해 너무 좋아</span>
             </li>
             </ul>
         </div>
@@ -206,7 +206,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-73.jpeg" alt="Summer x2 Osaka">
-            <span>포토스팟에서 . . </span>
+            <span>브이-</span>
             </li>
             </ul>
         </div>
@@ -214,7 +214,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-74.jpeg" alt="Summer x2 Osaka">
-            <span>저런 가게는 항상 우와-하고 지나가는데 언제 들어가서 먹을 날도 있을까 싶다</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -222,7 +222,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-75.jpeg" alt="Summer x2 Osaka">
-            <span>도톤보리 강. 이제보니 광고에 나가노 메이가. .</span>
+            <span>도톤보리 강. 이제보니 광고에 나가노 메이가! 역시 아는만큼 보인다~</span>
             </li>
             </ul>
         </div>
@@ -231,7 +231,7 @@
             <li>
             <img src="img-76.jpeg" alt="Summer x2 Osaka">
                 <p>📍Pablo</p>
-            <span>오지상 케이크부터 파블로 타르트까지 유메나 모노는 꼭 먹었나 보다</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -279,7 +279,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-82.jpeg" alt="Summer x2 Osaka">
-            <span>여기 가볼껄. .</span>
+            <span>여기 가볼 껄. .</span>
             </li>
             </ul>
         </div>
@@ -303,7 +303,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-85.jpeg" alt="Summer x2 Osaka">
-            <span>후회 막심. .</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -336,7 +336,7 @@
              <li>
              <img src="img-89.jpeg" alt="Summer x2 Osaka">
              <p>📍Orange street</p>
-             <span>쇼핑할 브랜드 모여있는 오렌지 스트릿 </span>
+             <span>쇼핑할 브랜드숍이 모여있는 오렌지 스트릿</span>
              </li>
             </ul>
         </div>
@@ -344,7 +344,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-90.jpeg" alt="Summer x2 Osaka">
-            <span>프레츠 버터와의 우연한 첫 만남. 전설의 시작이다.</span>
+            <span>그리고 프리츠 버터맛과의 우연한 첫 만남. 전설의 시작..</span>
             </li>
             </ul>
         </div>
@@ -360,7 +360,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-92.jpeg" alt="Summer x2 Osaka">
-            <span>이 장면은 만화에서나 본 것 같은데, 만화가 얼마나 실사 그대로 그린건지! 대다내</span>
+            <span>만화 썸네일같은 내 최애 사진</span>
             </li>
             </ul>
         </div>
@@ -376,7 +376,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-94.jpeg" alt="Summer x2 Osaka">
-            <span>어느 빈티지 샵의 피규어들</span>
+            <span>어느 빈티지 샵의 피규어장</span>
             </li>
             </ul>
         </div>
@@ -424,7 +424,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-100.jpeg" alt="Summer x2 Osaka">
-            <span>이치란 라멘</span>
+            <span>저녁은 이치란 라멘</span>
             </li>
             </ul>
         </div>
@@ -440,7 +440,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-102.jpeg" alt="Summer x2 Osaka">
-            <span>맛있으니까 유명하지 정말루</span>
+            <span>내 입맛에 딱이야</span>
             </li>
             </ul>
         </div>
@@ -456,7 +456,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-104.jpeg" alt="Summer x2 Osaka">
-            <span>핑크 노을까지 보여주는 오사카 정말 못 잊어</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -464,7 +464,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-105.jpeg" alt="Summer x2 Osaka">
-            <span> </span>
+            <span>핑크 노을까지 보여주는 오사카. 널 어떻게 잊어!</span>
             </li>
             </ul>
         </div>
@@ -472,7 +472,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-106.jpeg" alt="Summer x2 Osaka">
-            <span>이자카야 가는 길</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -480,7 +480,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-107.jpeg" alt="Summer x2 Osaka">
-            <span>해가지니 이자카야 거리에 로컬 직장인들, 관광객이 모여들었다</span>
+            <span>해가 다 지니 이자카야 거리에 로컬 직장인들, 관광객이 모여든다. </span>
             </li>
             </ul>
         </div>
@@ -488,7 +488,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-108.jpeg" alt="Summer x2 Osaka">
-            <span>로컬분들이 스탠딩바에서 오랫동안 하이볼 마시는건 여전히 신기하다. 다리아플 것 같아서. .</span>
+            <span>로컬분들이 스탠딩바에서 술마시는건 여전히 신기하다. 다리아플 것 같아서. .</span>
             </li>
             </ul>
         </div>
@@ -504,7 +504,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-110.jpeg" alt="Summer x2 Osaka">
-            <span>갑자기 베라로 이탈</span>
+            <span>이자카야 찾다 베라로 경로이탈</span>
             </li>
             </ul>
         </div>
@@ -568,7 +568,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-118.jpeg" alt="Summer x2 Osaka">
-            <span>야금야금 모아서 저장해둔 간식</span>
+            <span>야금야금 호텔 냉장고에 저장해둔 간식들</span>
             </li>
             </ul>
         </div>
@@ -576,7 +576,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-119.jpeg" alt="Summer x2 Osaka">
-            <span>편의점파티는 열어줘야, 맛없는게 없는게 신기하다</span>
+            <span>담날까지 야금야금 먹어서 뱃속에 저장</span>
             </li>
             </ul>
         </div>
@@ -592,7 +592,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-121.jpeg" alt="Summer x2 Osaka">
-            <span>도톤보리 강 보면서 먹은 모닝 타코야끼</span>
+            <span>도톤보리 리버뷰 보면서 먹은 모닝 타코야끼</span>
             </li>
             </ul>
         </div>
@@ -608,7 +608,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-123.jpeg" alt="Summer x2 Osaka">
-            <span>난바역으로 돌아가는 길</span>
+            <span>난바역으로 돌아간다</span>
             </li>
             </ul>
         </div>
@@ -616,7 +616,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-124.jpeg" alt="Summer x2 Osaka">
-            <span>영화관이었던가</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -640,7 +640,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-127.jpeg" alt="Summer x2 Osaka">
-            <span>돈카츠냐 규카츠냐. . 그래도 난 아직 돈카츠</span>
+            <span>돈카츠냐 규카츠냐. . 그래도 난 아직 돈카츠다</span>
             </li>
             </ul>
         </div>
@@ -656,7 +656,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-129.jpeg" alt="Summer x2 Osaka">
-            <span>가장 더웠지만 가장 기억남는 거리</span>
+            <span>가장 더웠지만 가장 기억에 남는 거리</span>
             </li>
             </ul>
         </div>
@@ -672,7 +672,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-131.jpeg" alt="Summer x2 Osaka">
-            <span>초코 오믈렛을 마지막으로, 안녕!</span>
+            <span>초코 오믈렛을 마지막으로, 오사카 안녕!</span>
             </li>
             </ul>
             </div>
