--- a/osaka.html
+++ b/osaka.html
@@ -83,7 +83,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-8.jpeg" alt="Summer x2 Osaka">
-            <span>공항 편의점에서 갑자기 모찌를 사 먹고는</span>
+            <span>공항 편의점에서 갑자기 모찌를 사먹고는</span>
             </li>
             </ul>
         </div>
@@ -91,7 +91,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-9.jpeg" alt="Summer x2 Osaka">
-            <span>스퀴즈 기념품을 지나</span>
+            <span>오사카 스퀴즈를 지나</span>
             </li>
             </ul>
         </div>
@@ -131,7 +131,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-14.jpeg" alt="Summer x2 Osaka">
-            <span>드디어 탄 라피트, 줄줄이 나있는 동그란 창문자리는 놓칠 수 없다. </span>
+            <span>드디어 탄 라피트, 줄줄이 나있는 동그란 창문 자리는 놓칠 수 없다. </span>
             </li>
             </ul>
         </div>
@@ -139,7 +139,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-15.jpeg" alt="Summer x2 Osaka">
-            <span>눈이 행복해지는 시간. .</span>
+            <span>눈이 행복해지는 오사카 풍경</span>
             </li>
             </ul>
         </div>
@@ -156,7 +156,7 @@
              <li>
              <img src="img-17.jpeg" alt="Summer x2 Osaka">
              <p>📍Nanba Station</p>
-             <span>난바역 도착!</span>
+             <span>난바역 도착</span>
              </li>
             </ul>
         </div>
@@ -172,7 +172,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-19.jpeg" alt="Summer x2 Osaka">
-            <span>역사에 야채가게는 첨 봐</span>
+            <span>역사에 야채가게가 있는 건 처음 본다.</span>
             </li>
             </ul>
         </div>
@@ -204,7 +204,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-23.jpeg" alt="Summer x2 Osaka">
-            <span>"눈 돌아간다"는 이럴 때 쓰는 말이구나. .</span>
+            <span>증말 눈 돌아간다 ㅇ0ㅇ</span>
             </li>
             </ul>
         </div>
@@ -228,7 +228,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-26.jpeg" alt="Summer x2 Osaka">
-            <span>거리마다 끝없이 높던 하늘과</span>
+            <span>거리마다 끝없이 높 하늘과</span>
             </li>
             </ul>
         </div>
@@ -292,7 +292,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-34.jpeg" alt="Summer x2 Osaka">
-            <span>쨍한 햇볕 풍경은 폭염을 잊게하지. . (기억조작일수도..)</span>
+            <span>쨍한 햇볕 풍경은 폭염을 잊게하지. . (기억조작일지도 모른다)</span>
             </li>
             </ul>
         </div>
@@ -341,7 +341,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-40.jpeg" alt="Summer x2 Osaka">
-            <span>장어덮밥이 유명하지만, 우리에게 가장 맛있던건 저 새우덴뿌라다.</span>
+            <span>장어덮밥이 유명하지만, 우리한테 젤 맛있던건 저 새우덴뿌라다.</span>
             </li>
             </ul>
         </div>
@@ -381,7 +381,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-45.jpeg" alt="Summer x2 Osaka">
-            <span>거리에 서너개씩 있는 자판기는 정말 오아시스가 따로 없다</span>
+            <span>거리에 서너개씩 있는 자판기는 오아시스가 따로 없다</span>
             </li>
             </ul>
         </div>
@@ -413,7 +413,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-49.jpeg" alt="Summer x2 Osaka">
-            <span>여름, 네모네모쿠루마, 정갈한 계단들</span>
+            <span>여름햇빛, 네모네모쿠루마, 정갈한 계단들</span>
             </li>
             </ul>
         </div>
