--- a/osaka.html
+++ b/osaka.html
@@ -177,7 +177,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-19.jpeg" alt="Summer x2 Osaka">
-            <span>역사에 야채가게가 있는 건 처음 본다.</span>
+            <span>역사에 야채가게가 있는 건 처음 본다</span>
             </li>
             </ul>
         </div>
