--- a/osaka2.html
+++ b/osaka2.html
@@ -46,7 +46,7 @@
              <li>
              <img src="img-53.jpeg" alt="Summer x2 Osaka">
                  <p>📍Rikuro Ojisang no Mise</p>
-             <span>놓칠 수 없다. 리쿠로 오지상 케이크</span>
+             <span>. 리쿠로 오지상 케이크</span>
              </li>
             </ul>
         </div>
@@ -174,7 +174,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-69.jpeg" alt="Summer x2 Osaka">
-            <span>첫입에 반해버린 포도물. 안달고 깔끔해 너무 좋아</span>
+            <span>첫입에 반해버린 포도물. 안달고 깔끔해서 너무 좋</span>
             </li>
             </ul>
         </div>
@@ -206,7 +206,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-73.jpeg" alt="Summer x2 Osaka">
-            <span>브이-</span>
+            <span>브이~</span>
             </li>
             </ul>
         </div>
@@ -239,7 +239,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-77.jpeg" alt="Summer x2 Osaka">
-            <span> </span>
+            <span>작다</span>
             </li>
             </ul>
         </div>
@@ -336,7 +336,7 @@
              <li>
              <img src="img-89.jpeg" alt="Summer x2 Osaka">
              <p>📍Orange street</p>
-             <span>쇼핑할 브랜드숍이 모여있는 오렌지 스트릿</span>
+             <span>쇼핑할 브랜드가 모여있는 오렌지 스트릿</span>
              </li>
             </ul>
         </div>
@@ -488,7 +488,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-108.jpeg" alt="Summer x2 Osaka">
-            <span>로컬분들이 스탠딩바에서 술마시는건 여전히 신기하다. 다리아플 것 같아서. .</span>
+            <span>로컬분들이 스탠딩바에서 술마시는건 여전히 신기하다. 다리아플 것 같아서;;</span>
             </li>
             </ul>
         </div>
@@ -544,7 +544,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-115.jpeg" alt="Summer x2 Osaka">
-            <span>흡연 이자카야라 후딱 먹고 나왔버렸지만, 친절하시고 나름 좋았다.</span>
+            <span>흡연 이자카야라 후딱 먹고 나왔버렸지만, 친절하시고 나름 좋았다</span>
             </li>
             </ul>
         </div>
@@ -568,7 +568,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-118.jpeg" alt="Summer x2 Osaka">
-            <span>야금야금 호텔 냉장고에 저장해둔 간식들</span>
+            <span>야금야금 냉장고에 저장해둔 간식들</span>
             </li>
             </ul>
         </div>
@@ -576,7 +576,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-119.jpeg" alt="Summer x2 Osaka">
-            <span>담날까지 야금야금 먹어서 뱃속에 저장</span>
+            <span>담날까지 야금야금 먹어서 뱃속에 저장 완료</span>
             </li>
             </ul>
         </div>
