--- a/osaka.html
+++ b/osaka.html
@@ -177,7 +177,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-19.jpeg" alt="Summer x2 Osaka">
-            <span>역사에 야채가게가 있는 건 처음 본다</span>
+            <span>역사에 야채가게가 있는건 처음 본다</span>
             </li>
             </ul>
         </div>
@@ -233,7 +233,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-26.jpeg" alt="Summer x2 Osaka">
-            <span>거리마다 끝없이 높 하늘과</span>
+            <span>거리마다 끝없이 높은 하늘과</span>
             </li>
             </ul>
         </div>
