--- a/osaka2.html
+++ b/osaka2.html
@@ -94,7 +94,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-59.jpeg" alt="Summer x2 Osaka">
-            <span>찰떡아이스는 안먹지만 유키미다이후쿠는 먹는 </span>
+            <span>찰떡아이스는 안먹지만 유키미다이후쿠는 먹는 사람</span>
             </li>
             </ul>
         </div>
