--- a/osaka2.html
+++ b/osaka2.html
@@ -174,7 +174,7 @@
             <ul class="clearfix">
             <li>
             <img src="img-69.jpeg" alt="Summer x2 Osaka">
-            <span>첫입에 반해버린 포도물. 안달고 깔끔해서 너무 좋</span>
+            <span>첫입에 반해버린 포도물. 안달고 깔끔해서 너무 좋다</span>
             </li>
             </ul>
         </div>
