--- a/tokyo.html
+++ b/tokyo.html
@@ -57,7 +57,7 @@
             <ul class="clearfix">
             <li>
             <img src="img00.jpeg" alt="TOKYO">
-            <span>짱구와 같이 가는 짱구 고향</span>
+            <span>서울 출신 짱구와 함께하는 여행</span>
             </li>
             </ul>
         </div>
@@ -73,7 +73,7 @@
             <ul class="clearfix">
             <li>
             <img src="img0000.jpeg" alt="TOKYO">
-            <span>저녁 비행기를 타니 창밖이 예뻤다.</span>
+            <span>저녁 비행기를 타니 창밖이 예쁘다</span>
             </li>
             </ul>
         </div>
@@ -81,7 +81,7 @@
             <ul class="clearfix">
             <li>
             <img src="img1.jpeg" alt="TOKYO">
-            <span>하늘에서 내려다 보는 도쿄 야경.</span>
+            <span>하늘에서 내려다 본 도쿄</span>
             </li>
             </ul>
         </div>
@@ -147,7 +147,7 @@
             <ul class="clearfix">
             <li>
             <img src="img10.jpeg" alt="TOKYO">
-            <span>일본 지하철은 항상 넘쳐나는 광고배너 구경하는 재미가 있다.</span>
+            <span>넘쳐나는 광고배너 구경하는 재미가 있는 일본 지하철</span>
             </li>
             </ul>
         </div>
@@ -163,7 +163,7 @@
             <ul class="clearfix">
             <li>
             <img src="img00000.jpeg" alt="TOKYO">
-            <span>역에 유독 정장입은 분들이 많았던 늦은 퇴근 시간</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -179,7 +179,7 @@
             <ul class="clearfix">
             <li>
             <img src="img13.jpeg" alt="TOKYO">
-            <span>텐동먹으러 '한노스케' 본점 도착.</span>
+            <span>텐동먹으러 '한노스케' 본점에 도착했다</span>
             </li>
             </ul>
         </div>
@@ -187,7 +187,7 @@
             <ul class="clearfix">
             <li>
             <img src="img12.jpeg" alt="TOKYO">
-            <span>웨이팅하는 동안 오사카에서 먹은 포도물을 찾았지만 결국 없었다. .</span>
+            <span>웨이팅하는 동안 오사카에서 먹은 포도물을 찾았지만 못찾았다. .</span>
             </li>
             </ul>
         </div>
@@ -204,7 +204,7 @@
             <ul class="clearfix">
             <li>
             <img src="img15.jpeg" alt="TOKYO">
-            <span>비슷한거라도. . 역시 맛은 다르다.</span>
+            <span>비슷한거라도. . 역시 찾던 맛은 아니야. .</span>
             </li>
             </ul>
         </div>
@@ -228,7 +228,7 @@
             <ul class="clearfix">
             <li>
             <img src="img18.jpeg" alt="TOKYO">
-            <span>바스락거리게 잘 튀겨진 튀김에 허니콤보 간장 조합, 잊지 못하는 맛이다.</span>
+            <span>바스락거리게 잘 튀겨진 튀김에 허니콤보간장(?) 조합, 잊지 못하는 맛이다.</span>
             </li>
             </ul>
         </div>
@@ -244,7 +244,7 @@
             <ul class="clearfix">
             <li>
             <img src="img20.jpeg" alt="TOKYO">
-            <span>다먹고 나오니 pm 10:30 쯤. .</span>
+            <span>다먹고 나오니 벌써 밤 10시반</span>
             </li>
             </ul>
         </div>
@@ -253,7 +253,7 @@
             <li>
             <img src="img21.jpeg" alt="TOKYO">
                 <p>📍 CITAN</p>
-            <span>이 날 머무른 호스텔, 카페와 바가 함께 있고 또 직원분들에게 나는 우드향이 좋았다^^.</span>
+            <span>이 날 머무른 호스텔, 카페와 바가 함께 있고 직원분한테서 나는 우드향이 가장 좋았다^ ^</span>
             </li>
             </ul>
         </div>
@@ -261,7 +261,7 @@
             <ul class="clearfix">
             <li>
             <img src="img22.jpeg" alt="TOKYO">
-            <span>편의점에서 간식 사냥.</span>
+            <span>편의점 간식 사냥꾼.</span>
             </li>
             </ul>
         </div>
@@ -285,7 +285,7 @@
             <ul class="clearfix">
             <li>
             <img src="img25.jpeg" alt="TOKYO">
-            <span>냉장고에 이로하스는 잠깐 맡겼지.</span>
+            <span>냉장고에 이로하스는 잠깐 맡겼다 갑니다~</span>
             </li>
             </ul>
         </div>
@@ -342,7 +342,7 @@
             <li>
             <img src="img32.jpeg" alt="TOKYO">
                 <p>📍 Yoyogi Station</p>
-            <span>요요기는 유명한 베이커리가 모여있어서 좋다.</span>
+            <span>요요기는 유명한 베이커리가 모여있어서 아주 조타</span>
             </li>
             </ul>
         </div>
@@ -358,7 +358,7 @@
             <ul class="clearfix">
             <li>
             <img src="img34.jpeg" alt="TOKYO">
-            <span>로손의 프리미엄 버전인 '네추럴 로손'도 역 앞에 바로 있다.</span>
+            <span>로손의 프리미엄 버전 '네추럴 로손'도 역 앞에 바로 있으니 두배로 조타</span>
             </li>
             </ul>
         </div>
@@ -374,7 +374,7 @@
             <ul class="clearfix">
             <li>
             <img src="img36.jpeg" alt="TOKYO">
-            <span>신주쿠 가는 길 어느 길목</span>
+            <span>신주쿠 가는 어느 길목에서 찰쿠닥</span>
             </li>
             </ul>
         </div>
@@ -390,7 +390,7 @@
             <ul class="clearfix">
              <li>
              <img src="img38.jpeg" alt="TOKYO">
-             <span>약간의 포포몬쓰 컷</span>
+             <span>약간의 포포몬쓰도 즐겼다</span>
              </li>
             </ul>
         </div>
@@ -416,7 +416,7 @@
             <li>
             <img src="img42.jpeg" alt="TOKYO">
                 <p>📍 Tatsunoya</p>
-            <span>츠케멘이 유명한 신주쿠 타츠노야</span>
+            <span>츠케멘으로 아주 유명한 신주쿠 타츠노야</span>
             </li>
             </ul>
         </div>
@@ -424,7 +424,7 @@
             <ul class="clearfix">
             <li>
             <img src="img43.jpeg" alt="TOKYO">
-            <span>우리가 시킨건 호르몬 츠케멘! 육수 감칠맛이 엄청났다. 담엔 밥까지 말아먹을테다. </span>
+            <span>우리가 시킨건 호르몬 츠케멘! 육수 감칠맛이 엄청나다 담엔 밥까지 말아먹을테다. </span>
             </li>
             </ul>
         </div>
@@ -440,7 +440,7 @@
             <ul class="clearfix">
             <li>
             <img src="img45.jpeg" alt="TOKYO">
-            <span>사진에선 버즈를 들고 있지만 나는 우디를 샀다</span>
+            <span>사진은 버즈랑 찍고 나는 우디를 데려왔다!</span>
             </li>
             </ul>
         </div>
@@ -448,7 +448,7 @@
             <ul class="clearfix">
             <li>
             <img src="img46.jpeg" alt="TOKYO">
-            <span>저 마이크 인형은 우리 강아지 최애 장난감이 되었고</span>
+            <span>이 때산 마이크 인형은 우리 솜이 최애 장난감이 되었고</span>
             </li>
             </ul>
         </div>
@@ -480,7 +480,7 @@
             <ul class="clearfix">
             <li>
             <img src="img50.jpeg" alt="TOKYO">
-            <span>그리고 스크램블 교차로! 소문대로 항상 사람이 많았다.</span>
+            <span>그리고 스크램블 교차로에서도 찰쿠닥</span>
             </li>
             </ul>
         </div>
