--- a/tokyo2.html
+++ b/tokyo2.html
@@ -46,7 +46,7 @@
             <ul class="clearfix">
              <li>
              <img src="img51.jpeg" alt="TOKYO">
-             <span> </span>
+             <span>'스키야'간판, 엄마한테 보내주려고 찍었다. 울엄마 이름은 '숙희'다.</span>
              </li>
             </ul>
         </div>
@@ -63,7 +63,7 @@
              <li>
              <img src="img53.jpeg" alt="TOKYO">
              
-             <span>어느 골목이든 고즈넉하고 좋아서 버스탈 거리도 걷게되는 도쿄</span>
+             <span>어느 골목이든 고즈넉하고 볼게 많아서 버스탈 거리도 그냥 걸어가자!하고 걸었다</span>
              </li>
             </ul>
         </div>
@@ -71,7 +71,7 @@
             <ul class="clearfix">
             <li>
             <img src="img54.jpeg" alt="TOKYO">
-            <span>귀여운 유치원 게시판</span>
+            <span>귀여운 요우치엔 게시판</span>
             </li>
             </ul>
         </div>
@@ -79,7 +79,7 @@
             <ul class="clearfix">
             <li>
             <img src="img55.jpeg" alt="TOKYO">
-            <span>표정 뭐야</span>
+            <span>신호 건너다 우연찮게 찍힌 척~하는 사진</span>
             </li>
             </ul>
         </div>
@@ -87,7 +87,7 @@
             <ul class="clearfix">
             <li>
             <img src="img56.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>이건 자판기에서 음료뽑다가 우연히 찍힌 척~하는 사진</span>
             </li>
             </ul>
         </div>
@@ -119,7 +119,7 @@
             <ul class="clearfix">
             <li>
             <img src="img60.jpeg" alt="TOKYO">
-            <span>노을질 때 즈음 도착한 다이칸야마쪽</span>
+            <span>노을질 때 즈음 도착한 다이칸야마</span>
             </li>
             </ul>
         </div>
@@ -168,7 +168,7 @@
             <ul class="clearfix">
             <li>
             <img src="img67.jpeg" alt="TOKYO">
-            <span>귀여운 쫄랑이. 너 나카메구로 살아서 좋겠다!</span>
+            <span>귀여운 쫄랑이. 너 나카메구로 살아서 좋겠다</span>
             </li>
             </ul>
         </div>
@@ -200,7 +200,7 @@
             <ul class="clearfix">
             <li>
             <img src="img71.jpeg" alt="TOKYO">
-            <span>도쿄타워 도착!</span>
+            <span>도쿄타워 도착! 언니는 올라가고 싶은데 나는 굳이?로 의견논쟁이 있었지만~</span>
             </li>
             </ul>
         </div>
@@ -208,7 +208,7 @@
             <ul class="clearfix">
             <li>
             <img src="img72.jpeg" alt="TOKYO">
-            <span>예뻐. . . 근데 주변에선 스카이트리 야경이 더 좋다하더라</span>
+            <span>근데 올라와보길 백번잘했다~ 담엔 스카이트리두 간다</span>
             </li>
             </ul>
         </div>
@@ -216,7 +216,7 @@
             <ul class="clearfix">
             <li>
             <img src="img73.jpeg" alt="TOKYO">
-            <span>조명도 다양하게 바뀌는 도쿄타와-</span>
+            <span>조명도 다양하게 바뀌는 도쿄타와- 안녕</span>
             </li>
             </ul>
         </div>
@@ -232,7 +232,7 @@
             <ul class="clearfix">
             <li>
             <img src="img75.jpeg" alt="TOKYO">
-            <span>주변에서 간단히 오므라이스로 저녁 먹기. </span>
+            <span>주변에서 간단히 오므라이스로 저녁 떼우고 </span>
             </li>
             </ul>
         </div>
@@ -240,7 +240,7 @@
             <ul class="clearfix">
             <li>
             <img src="img76.jpeg" alt="TOKYO">
-            <span>초밥 못먹는 내가, 일본에서는 마트초밥조차 먹고싶어져. .</span>
+            <span>초밥좋아하는 엄빠한테 보내주려고 찍은 일본마트에 흔한초밥 비주얼..</span>
             </li>
             </ul>
         </div>
@@ -256,7 +256,7 @@
             <ul class="clearfix">
             <li>
             <img src="img78.jpeg" alt="TOKYO">
-            <span>숙소로 돌아와 씻고 자려다, 아쉬운 마음에 새벽 산책을 나왔다.</span>
+            <span>숙소로 돌아와 씻고 자려다, 급 새벽 산책을 나왔다.</span>
             </li>
             </ul>
         </div>
@@ -264,7 +264,7 @@
             <ul class="clearfix">
             <li>
             <img src="img79.jpeg" alt="TOKYO">
-            <span>산책길에 생활소품샵 'KIO'도 만나고</span>
+            <span>산책길에 소품샵 'KIO'도 만나고</span>
             </li>
             </ul>
         </div>
@@ -280,7 +280,7 @@
             <ul class="clearfix">
             <li>
             <img src="img81.jpeg" alt="TOKYO">
-            <span>세븐들러서 카페오레 하나 구매</span>
+            <span>세븐들러서 카페오레 하나 호로록</span>
             </li>
             </ul>
         </div>
@@ -288,7 +288,7 @@
             <ul class="clearfix">
             <li>
             <img src="img82.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>자정이 넘은 시간에 거리에는 아무도 없는데</span>
             </li>
             </ul>
         </div>
@@ -296,7 +296,7 @@
             <ul class="clearfix">
             <li>
             <img src="img83.jpeg" alt="TOKYO">
-            <span>자정이 넘은 시간에 작은 이자카야들만 활기가득히 불이 켜져있었는데 다른 세상같았다.</span>
+            <span>몇몇 작은 이자카야에는 다른 세상인 것처럼 사람이 가득했다</span>
             </li>
             </ul>
         </div>
@@ -320,7 +320,7 @@
             <ul class="clearfix">
             <li>
             <img src="img86.jpeg" alt="TOKYO">
-            <span> 라-멘</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -328,7 +328,7 @@
             <ul class="clearfix">
             <li>
             <img src="img87.jpeg" alt="TOKYO">
-            <span> 낡은 건물과 신식 건물이 공존하지만 왠지 낡은 간판들에 더 눈이 간다</span>
+            <span>모닝</span>
             </li>
             </ul>
         </div>
@@ -336,8 +336,7 @@
             <ul class="clearfix">
              <li>
              <img src="img88.jpeg" alt="TOKYO">
-             <p>📍Sobayosi</p>
-             <span>첫 끼는 로컬, 관광객에 모두에게 맛집인 100년 전통 소바전문점. </span>
+             <span>요요기 숙소도 안녕!</span>
              </li>
             </ul>
         </div>
@@ -345,7 +344,7 @@
             <ul class="clearfix">
             <li>
             <img src="img89.jpeg" alt="TOKYO">
-            <span>장어덮밥도 유명하지만, 가장 맛있던건 저 새우덴뿌라다. 다음엔 꼭 튀김정식을 먹어야지</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -353,7 +352,7 @@
             <ul class="clearfix">
             <li>
             <img src="img90.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>오늘은 베이글 먹으로 츠키지 쪽으로 간다</span>
             </li>
             </ul>
         </div>
@@ -361,7 +360,7 @@
             <ul class="clearfix">
             <li>
             <img src="img91.jpeg" alt="TOKYO">
-            <span>사자 머리의 야사카 신사.</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -385,7 +384,7 @@
             <ul class="clearfix">
             <li>
             <img src="img94.jpeg" alt="TOKYO">
-            <span>거리에 서너개씩 꼭 있는 자판기가 무더위에는 진짜 오아시스가 따로 없다</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -393,7 +392,7 @@
             <ul class="clearfix">
             <li>
             <img src="img95.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>포장만 하는데도 줄을 오래 서야한다!</span>
             </li>
             </ul>
         </div>
@@ -417,7 +416,7 @@
             <ul class="clearfix">
             <li>
             <img src="img98.jpeg" alt="TOKYO">
-            <span>키미노 나마에와. . . 영화 그자체</span>
+            <span>ㅠㅠ 귀여워 죽겄다</span>
             </li>
             </ul>
         </div>
@@ -425,7 +424,7 @@
             <ul class="clearfix">
             <li>
             <img src="img99.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>세상 얌전한아가들</span>
             </li>
             </ul>
         </div>
@@ -433,7 +432,7 @@
             <ul class="clearfix">
             <li>
             <img src="img100.jpeg" alt="TOKYO">
-            <span>마리오 와루도-</span>
+            <span>드디어 우리 차례</span>
             </li>
             </ul>
         </div>
